data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2553.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\99\80\80\80\00\01\01\41\13"
    "\6d\69\73\6d\61\6e\61\67\65\64\5f\62\72\5f\74\61"
    "\62\6c\65\00\00\03\82\80\80\80\00\01\01\07\89\80"
    "\80\80\00\01\05\73\74\61\72\74\00\01\0a\8c\80\80"
    "\80\00\01\86\80\80\80\00\00\41\01\10\00\0b"
  )
""
)